# typeahead-search

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
include/typeahead/: search.h
src/: CMakeLists.txt  example-data.h  heuristic-search.h  main.cpp  vcpkg.json
test/: CMakeLists.txt  CMakePresets.json  search_test.cpp  test_main.cpp  vcpkg.json
